# ComfyUI-DyPE

./: IMPROVEMENTS.md  README.md  __init__.py  pyproject.toml
docs/: LEARNINGS.md
example_workflows/: DyPE-Qwen-workflow.json  DyPE-ZIT-workflow.json
src/: __init__.py  base.py  patch.py  patch_utils.py  qwen_patch.py  qwen_spatial.py
src/models/: flux.py  nunchaku.py  qwen.py  z_image.py  zimage.py
tests/: test_qwen_dype.py
