[project]
name = "ComfyUI-DyPE"
description = "DyPE. Artifact-free 4K+ image generation. Qwen, Flux, Nunchacku, Z-Image"
version = "2.2.0"
license = {file = "LICENSE"}
dependencies = ["torch"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-DyPE"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wildai"
DisplayName = "ComfyUI-DyPE"
Icon = ""
